@@ -4,8 +4,8 @@
 \noindent
 
 \setlength\extrarowheight{1pt}
-\tablehead{\bfseries Nr. & \bfseries Ablagenr. & \bfseries Ordnungspos. & \bfseries Titel & \bfseries Verantwortlich & \bfseries Status & \bfseries Beginn\\ \hline}
-\begin{supertabular*}{\textwidth}{p{4mm}p{40mm}p{50mm}p{50mm}p{50mm}p{16mm}p{10mm}}
+\tablehead{\bfseries Aktenzeichen & \bfseries Nr. & \bfseries Ablagenr. & \bfseries Ordnungspos. & \bfseries Titel & \bfseries Federführung & \bfseries Status & \bfseries Beginn & \bfseries Ende\\ \hline}
+\begin{supertabular*}{\textwidth}{p{13mm}p{4mm}p{20mm}p{40mm}p{50mm}p{48mm}p{16mm}p{10mm}p{10mm}}
 
 % for row in rows:
 ${row} \\ \hline
