@@ -5,6 +5,11 @@ Changelog
 2.0.2 (unreleased)
 ------------------
 
+- Dossier listing PDF: Update layout and date according to definitions in ticket.
+  Issue #1173 Feedback aus Pilotphase: Vorlage "Dossierverzeichnis" ueberarbeiten
+  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1173
+  [jone]
+
 - Dossier listing PDF: reimplement with ftw.pdfgenerator.
   [jone]
 
